syntax = "proto3";

package io.coremaker.internship.posmonitoring;

message CreatePosDeviceRequestGrpc {
  string deviceId = 1;
  string location = 2;
  string provider = 3;
  bool online = 4;
  string lastActivity = 5;
}