syntax = "proto3";

package io.coremaker.internship.posmonitoring;

import "google/protobuf/timestamp.proto";

message CreatePosDeviceResponseGrpc {
  sfixed64 Id = 1;
  string deviceId = 2;
  string location = 3;
  string provider = 4;
  bool online = 5;
  string lastActivity = 6;
  string createdAt = 7;
  string updatedAt = 8;
}