syntax = "proto3";

package io.coremaker.internship.posmonitoring;

import "io.coremaker.internship.posmonitoring/create_pos_device_request.proto";
import "io.coremaker.internship.posmonitoring/create_pos_device_response.proto";
import "io.coremaker.internship.posmonitoring/get_pos_device_details_request.proto";
import "io.coremaker.internship.posmonitoring/get_pos_device_details_response.proto";

service PosDeviceService {
  rpc AddPosDevice(CreatePosDeviceRequestGrpc) returns (CreatePosDeviceResponseGrpc);
  rpc GetPosDevice(GetDeviceDetailsRequestGrpc) returns (GetDeviceDetailsResponseGrpc);
}